# along-the-memory-lane

./: .env.example  .gitignore  README.md  VISION.md  config.py  glossary.example.txt  main.py  pyproject.toml  requirements.txt
app/: app.py
scripts/: common.py  fetch_wordpress_api.py  ingest.py  migrate_add_title.py  ocr_journals.py  parse_claude_transcript.py  parse_wordpress.py  pdf_to_images.py  split_journal_txt.py
